--- a/Motor2D/Motor2D.vcxproj
+++ b/Motor2D/Motor2D.vcxproj
@@ -96,6 +96,7 @@
     <ClCompile Include="j1Scene.cpp" />
     <ClCompile Include="j1Timer.cpp" />
     <ClCompile Include="ObjBox.cpp" />
+    <ClCompile Include="ObjCollectible.cpp" />
     <ClCompile Include="ObjDoor.cpp" />
     <ClCompile Include="ObjEnemy.cpp" />
     <ClCompile Include="ObjEnemyFlying.cpp" />
@@ -126,6 +127,7 @@
     <ClInclude Include="j1Scene.h" />
     <ClInclude Include="j1Timer.h" />
     <ClInclude Include="ObjBox.h" />
+    <ClInclude Include="ObjCollectible.h" />
     <ClInclude Include="ObjDoor.h" />
     <ClInclude Include="ObjEnemy.h" />
     <ClInclude Include="ObjEnemyFlying.h" />
