button goes back to hover after click and added button functions to its own .h

--- a/Motor2D/Motor2D.vcxproj.filters
+++ b/Motor2D/Motor2D.vcxproj.filters
@@ -216,6 +216,9 @@
     <ClInclude Include="ObjCollectible.h">
       <Filter>Objects</Filter>
     </ClInclude>
+    <ClInclude Include="ButtonFunctions.h">
+      <Filter>Tools</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Modules">
