--- a/Motor2D/Motor2D.vcxproj
+++ b/Motor2D/Motor2D.vcxproj
@@ -79,6 +79,7 @@
     <ClCompile Include="GUIButton.cpp" />
     <ClCompile Include="GUICheckbox.cpp" />
     <ClCompile Include="GUIImage.cpp" />
+    <ClCompile Include="GUISlider.cpp" />
     <ClCompile Include="GUIText.cpp" />
     <ClCompile Include="GUIInputText.cpp" />
     <ClCompile Include="j1Collision.cpp" />
@@ -116,6 +117,7 @@
     <ClInclude Include="GUIButton.h" />
     <ClInclude Include="GUICheckbox.h" />
     <ClInclude Include="GUIImage.h" />
+    <ClInclude Include="GUISlider.h" />
     <ClInclude Include="GUIText.h" />
     <ClInclude Include="GUIInputText.h" />
     <ClInclude Include="j1Collision.h" />
